--- a/components/btn1/style/index.less
+++ b/components/btn1/style/index.less
@@ -1,10 +1,11 @@
-.my-btn2 {
+.btn1 {
   height: 40px;
   line-height: 40px;
   text-align: center;
-  background: #666666;
-  color: #f7cdcd;
+  background: #ffffff;
+  color: #222222;
   font-size: 14px;
   border: 1px solid #888888;
   border-radius: 2px;
+  cursor: pointer;
 }
