--- a/components/btn2/style/index.less
+++ b/components/btn2/style/index.less
@@ -1,4 +1,4 @@
-.my-btn2 {
+.btn2 {
   height: 40px;
   line-height: 40px;
   text-align: center;
@@ -7,4 +7,5 @@
   font-size: 14px;
   border: 1px solid #888888;
   border-radius: 2px;
+  cursor: pointer;
 }
