--- a/template/component/box.html
+++ b/template/component/box.html
@@ -11,7 +11,9 @@
   <view class="box-4" xx:elif="{{type == '2'}}">
     002
   </view>
-  <view class="box-4" xx:else>
+  <view class="box-4" xx:else >
     003
   </view>
+
+  <view bindtap="myClickAction">Click Me</view>
 </view>
