--- a/template/component/hello.html
+++ b/template/component/hello.html
@@ -1,17 +1,18 @@
 <view>
   <view class="box-1">{{title}}</view>
   <view class="box-2">{{subTitle}}</view>
-  <view class="box-3" x:for="{{list}}"> 
+  <view class="box-3" xx:for="{{list}}" > 
     {{item}}
   </view>
 
-  <view class="box-4" x:if="{{type == '1'}}">
+  <view class="box-4" xx:if="{{type == '1'}}" >
     001
   </view>
-  <view class="box-4" x:elif="{{type == '2'}}">
+  <view class="box-4" xx:elif="{{type == '2'}}" >
     002
   </view>
-  <view class="box-4" x:else >
+  <view class="box-4" xx:else >
     003
   </view>
+  <view bindtap="myClickAction">Click Me</view>
 </view>
