--- a/template/index.html
+++ b/template/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Example</h1>
+    <div id="root"></div>
   </body>
   <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
