--- a/template/component/hello.html
+++ b/template/component/hello.html
@@ -8,11 +8,8 @@
   <view class="box-4" xx:if="{{type == '1'}}" >
     001
   </view>
-  <view class="box-4" xx:elif="{{type == '2'}}" >
+  <view class="box-4" xx:if="{{type == '2'}}" >
     002
-  </view>
-  <view class="box-4" xx:else >
-    003
   </view>
   <view bindtap="myClickAction">Click Me</view>
 </view>
