--- a/packages/static/template/component/hello.html
+++ b/packages/static/template/component/hello.html
@@ -1,14 +1,14 @@
 <view>
   <view class="box-1">{{title}}</view>
   <view class="box-2">{{subTitle}}</view>
-  <view class="box-3" xx:for="{{list}}" > 
+  <view class="box-3" @:for="{{list}}" > 
     {{item}}
   </view>
 
-  <view class="box-4" xx:if="{{type == '1'}}" >
+  <view class="box-4" @:if="{{type == '1'}}" >
     001
   </view>
-  <view class="box-4" xx:if="{{type == '2'}}" >
+  <view class="box-4" @:if="{{type == '2'}}" >
     002
   </view>
   <view bindtap="myClickAction">Click Me</view>
