--- a/packages/static/template/component/box.html
+++ b/packages/static/template/component/box.html
@@ -1,19 +1,18 @@
 <view>
   <view class="box-1">{{title}}</view>
   <view class="box-2">{{subTitle}}</view>
-  <view class="box-3" @:for="{{list}}"> 
-    {{item}}
+  <view class="box-3"> 
+    <view class="box-5" @:for="{{list}}"> 
+      item-{{item}}
+    </view>
   </view>
 
   <view class="box-4" @:if="{{type == '1'}}">
     001
   </view>
-  <view class="box-4" @:elif="{{type == '2'}}">
+  <view class="box-4" @:else >
     002
   </view>
-  <view class="box-4" @:else >
-    003
-  </view>
 
-  <view bindtap="myClickAction">Click Me</view>
+  <button onClick="myClickAction">Click Me</button>
 </view>
