--- a/packages/static/template/index.html
+++ b/packages/static/template/index.html
@@ -1,12 +1,16 @@
 <html>
   <head>
-    
+    <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script><script src="https://unpkg.com/vue@3.2.26/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.js"></script>
   </head>
+
   <body>
-    <h1>Example</h1>
-    <div id="root"></div>
+    <h1>React</h1>
+    <div id="react-root"></div>
+
+    <h1>Vue</h1>
+    <div id="vue-root"></div>
   </body>
-  <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script type="module" src="./index.js"></script>
 </html>
