--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,8 +1,2 @@
-@import './mod/text.less';
-
-.app {
-  background: #f8f8f8;
-  font-size: 40px;
-  font-weight: bolder;
-  color: #888888;
-}
+@import './lib/page.less';
+@import './lib/box.less';
