--- a/src/css/lib/box.less
+++ b/src/css/lib/box.less
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px dashed #888888;
+  border: 1px solid #888888;
   background: #ffffff;
   width: 120px;
   height: 40px;
   cursor: move;
+  margin: 0 10px;
 }
