--- a/src/css/lib/wrapper.less
+++ b/src/css/lib/wrapper.less
@@ -1,7 +1,14 @@
+.wrapper-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .wrapper {
+  display: flex;
   border: 1px solid #00000036;
   height: 120px;
-  width: 120px;
+  width: 100%;
   color: white;
   padding-top: 10px;
   text-align: center;
