--- a/src/drag-layout/css/lib/wrapper.less
+++ b/src/drag-layout/css/lib/wrapper.less
@@ -7,8 +7,8 @@
 .wrapper {
   display: flex;
   border: 1px solid #00000036;
-  height: 120px;
-  width: 100%;
+  min-height: 120px;
+  min-width: 100%;
   color: white;
   padding-top: 10px;
   text-align: center;
